# kurs_bd_lip

./: .gitignore  UML-диаграмма.drawio  er_diagram.drawio  ~$патникова_251_951_ПЗ_КР_БД.docx  Липатникова_251_951_ПЗ_КР_БД.docx  Пояснительная записка.docx  заметки.docx
kurs_bd/: CMakeLists.txt  dbmanager.cpp  dbmanager.h  kurs_bd.pro  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h  style.qss
Инфологическая модель/: er_diagram_var_9.drawio
Реляционная модель/: Реляционная модель 2 Липатникова.docx  релиционная_2.drawio
Физическая модель/: schema.sql  seed.sql  test.sql
